assets/css/style.css
/* Google Fonts */
@import url('https://fonts.googleapis.com/css2?family=Madimi+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');

/* Wildcard selector to override default styles given to the browser */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: "Madimi One", "Rubik", sans-serif;
}

body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

/* Site Header Styling */

header {
    background-color: whitesmoke;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 100;
    margin-bottom: 100px;
}

/* Main Content Styling */

/* Pushes Footer down page */
main {
    flex: 1 0 auto;
    background-color: whitesmoke;
}

.background-img {
    position: fixed;
    width: 100%;
    height: 100%;
    object-fit: cover;
    filter: blur(5px);
    z-index: 1;
}

.game-section {
    display: flex;
    padding: 5px;
    z-index: 100;
    background-color: bisque;

}

/* Game Start Button styling */
.start-btn {
    display: flex;
    position: absolute;
    width: 300px;
    height: 150px;
    background-image: url('../images/game-assets/play-btn.webp');
    background-size: cover;
    cursor: pointer;
    transition: background-image 0.3s ease-in-out, width 0.3s ease-in-out, height 0.3s ease-in-out;
}

.start-btn:hover {
    width: 320px;
    height: 170px;
    background-image: url('../images/game-assets/play-btn-hover.webp');
}

/* Game Menu Button styling */
.gameMenu-btn {
    display: flex;
    position: absolute;
    width: 300px;
    height: 150px;
    top: 650px;
    background-image: url('../images/game-assets/menu-btn.webp');
    background-size: cover;
    cursor: pointer;
    transition: background-image 0.3s ease-in-out, width 0.3s ease-in-out, height 0.3s ease-in-out;
}

.gameMenu-btn:hover {
    width: 320px;
    height: 170px;
    background-image: url('../images/game-assets/menu-btn-hover.webp');
}

/* Game Start Button styling */
.gameHtp-btn {
    display: flex;
    position: absolute;
    width: 300px;
    height: 150px;
    top: 650px;
    background-image: url('../images/game-assets/howtoplay-btn.webp');
    background-size: cover;
    cursor: pointer;
    transition: background-image 0.3s ease-in-out, width 0.3s ease-in-out, height 0.3s ease-in-out;
}

.gameHtp-btn:hover {
    width: 320px;
    height: 170px;
    background-image: url('../images/game-assets/howtoplay-btn-hover.webp');
}

.gameRestart-btn {
    display: flex;
    position: absolute;
    width: 300px;
    height: 150px;
    top: 520px;
    background-image: url('../images/game-assets/restart-btn.webp');
    background-size: cover;
    cursor: pointer;
    transition: background-image 0.3s ease-in-out, width 0.3s ease-in-out, height 0.3s ease-in-out;
}

.gameRestart-btn:hover {
    width: 320px;
    height: 170px;
    background-image: url('../images/game-assets/restart-btn-hover.webp');
}

.gameGoBack-btn {
    display: flex;
    position: absolute;
    width: 300px;
    height: 150px;
    top: 800px;
    background-image: url('../images/game-assets/goback-btn.webp');
    background-size: cover;
    cursor: pointer;
    transition: background-image 0.3s ease-in-out, width 0.3s ease-in-out, height 0.3s ease-in-out;
}

.gameGoBack-btn:hover {
    width: 320px;
    height: 170px;
    background-image: url('../images/game-assets/goback-btn-hover.webp');
}

.howtoplay-list {
    display: flex;
    position: absolute;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    background-color: whitesmoke;
    width: 700px;
    height: 400px;
    top: 330px;
    border: 3px solid black;
    background-image: url('../images/game-assets/howtoplay-div-img.webp');
    background-size: cover;

}

.howtoplay-list h2 {
    font-size: 250%;
}

.howtoplay-list p,
ol {
    font-size: 150%;
    line-height: 2;
}

.gameScore {
    display: flex;
    flex-direction: column;
    align-items: center;
    position: absolute;
    font-size: 35px;
    font-family: "Madimi One", "Rubik", sans-serif;
    color: #7AD071;
    top: 16px;
    
}

.gameScore>span {
    color: #C6A6EA;
}

.gameOverScore {
    top: 350px;
    font-size: 60px;
}


#gameContainer {
    display: flex;
    position: relative;
    margin: auto;
    justify-content: center;
    align-items: center;
    border: 5px solid black;
    z-index: 100;
}

/* Site Feedback section */
.feedback-section {
    background-color: pink;
    z-index: 100;
}

/* Footer Styling */

footer {
    background-color: peru;
    z-index: 100;
}

/* Class to hide any Element */
.hidden {
    display: none;
}

